<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wab"
    tools:context=".Menus">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="343dp"
        android:layout_height="43dp"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/canteen"
        android:textColor="#FA0F0F0F"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="409dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0"
        app:tabIndicatorColor="@color/black"
        app:tabMaxWidth="264dp"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/NI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ni" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/SI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snacks" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beverages" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desert" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extras" />


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="411dp"
        android:layout_height="566dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cart"
        android:layout_width="416dp"
        android:layout_height="62dp"
        android:layout_margin="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/cart"
        android:textColor="@color/wht"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pager"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>