<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wab"
    android:layout_height="match_parent"
    tools:context=".User_Signup">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/canteen"
        android:textColor="#FA0F0F0F"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/name"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_username"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enter_the_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_text_view"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_mail"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enter_email_id"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_text_view"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_below="@id/email_text_view"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_password"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/confirm_password_text_view"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_below="@id/password_text_view"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_confirmpassword"
        android:fontFamily="sans-serif-black"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <Button
        android:id="@+id/SignUp_Button"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_below="@id/confirm_password_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up"
        android:textColor="@color/wht"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_view"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/SignUp_text_view"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_below="@id/SignUp_Button"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:paddingTop="20dp"
        android:text="@string/have_an_account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_Button"
        app:layout_constraintVertical_bias="0.07" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/SignUp_text_view"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>