<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/remove_cart_item_btn"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/black"
        android:text="@string/r"
        android:textColor="@color/wht"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="@id/cancel_cart_item_btn"
        app:layout_constraintTop_toBottomOf="@id/remove_cart_item_tv"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/remove_cart_item_tv"
        android:layout_width="363dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/t"
        android:paddingTop="10dp"
        android:fontFamily="@font/raleway"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel_cart_item_btn"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/black"
        android:text="@string/c"
        android:textColor="@color/wht"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remove_cart_item_tv"
        app:layout_constraintVertical_bias="0.014" />
</androidx.constraintlayout.widget.ConstraintLayout>
